--- a/app/index.html
+++ b/app/index.html
@@ -1,15 +1,81 @@
 <!DOCTYPE html>
 <html ng-app="app">
 <head lang="en">
-    <title>AngularJS Tutorials</title>
+    <title>Types of beauty</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body ng-controller="HomeController as homeCtrl">
 <div class="container">
+    <div class="row bgheader">
+        <div class="">
+            <header>
+                <h1>Jak określić typ urody?</h1></header>
+        </div>
+
+    </div>
+
+
+    <div class="row">
+        <div class="col-md-3 bgnav">
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>Wiosna</li>
+                    <li>Lato</li>
+                    <li>Jesień</li>
+                    <li>Zima</li>
+                    <li>Test kolorystyczny</li>
+                </ul>
+            </nav>
+
+        </div>
+        <div class="col-md-9">
+            <main>
+                <h5>Jaki typ urody reprezentujesz? Czy aby na pewno podkreślasz wszystkie swoje atuty? Jesteś wiosną, latem, jesienią czy zimą?
+                    Typ urody - galeria Każda kobieta powinna umieć wydobyć swoje piękno. Oczywiście poniższe wyznaczniki są jedynie orientacyjne - częstopanie
+                    mają mieszany typ urody i mogą dowolnie wybierać pasujące do nich dodatki. O tym, jaka paleta barw współgra z twoją urodą i czego
+                    owinnaś się wystrzegać, dowiesz się z poniższej aplikacji.</h5>
+
+                <h5>Wiosna, lato, jesień i zima to cztery typy urody, które tworzą analizę kolorystyczną. Jej autorem jest szwajcarski nauczyciel malarstwa
+                    Johannes Itten, który twierdził, że każda osoba ma w sobie indywidualną paletę kolorów adekwatnych do pór roku. Lato i zima to typy chłodne,
+                    zaś pozostałe dwa (wiosna i jesień) to odcienie ciepłe. Pani zima i pani jesień powinny nosić ubrania kontrastowe, skupiające uwagę,
+                    natomiast
+                    pani wiosna i lato lepiej wyglądają w kolorach delikatnych i pastelowych. Analiza kolorystyczna
+                    pozwala na identyfikację typu urody konkretnej osoby oraz dobranie do niej odpowiedniego, efektownego makijażu oraz twarzowej fryzury.</h5>
+
+                <figure>
+                    <img src="images/types.jpg" class="img-thumbnail">
+
+                </figure>
+            </main>
+
+
+        </div>
+    </div>
+    <!--<div class="row">-->
+    <!--<div class="col-md-3">-->
+    <!--<aside>-->
+    <!--<div class="bg"></div>-->
+    <!--</aside>-->
+
+    <!--</div>-->
+    <!--<div class="col-md-9 center">-->
+    <!--<figure>-->
+    <!--<img src="images/types.jpg" class="img-thumbnail">-->
+
+    <!--</figure>-->
+
+
+    <div class="row">
+        <footer>
+
+        </footer>
+    </div>
+
 
 </div>
-
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="app.js"></script>
 <script src="home.controller.js"></script>
