--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,8 @@
         <div class="col-md-3 bgnav">
             <nav>
                 <ul>
-                    <li>Home</li>
-                    <li>Wiosna</li>
+                    <li><a href="/home">Home</a></li>
+                    <li><a href="/spring">Wiosna</a></li>
                     <li>Lato</li>
                     <li>Jesień</li>
                     <li>Zima</li>
@@ -32,40 +32,9 @@
 
         </div>
         <div class="col-md-9">
-            <main>
-                <h5>Jaki typ urody reprezentujesz? Czy aby na pewno podkreślasz wszystkie swoje atuty? Jesteś wiosną, latem, jesienią czy zimą?
-                    Typ urody - galeria Każda kobieta powinna umieć wydobyć swoje piękno. Oczywiście poniższe wyznaczniki są jedynie orientacyjne - częstopanie
-                    mają mieszany typ urody i mogą dowolnie wybierać pasujące do nich dodatki. O tym, jaka paleta barw współgra z twoją urodą i czego
-                    owinnaś się wystrzegać, dowiesz się z poniższej aplikacji.</h5>
-
-                <h5>Wiosna, lato, jesień i zima to cztery typy urody, które tworzą analizę kolorystyczną. Jej autorem jest szwajcarski nauczyciel malarstwa
-                    Johannes Itten, który twierdził, że każda osoba ma w sobie indywidualną paletę kolorów adekwatnych do pór roku. Lato i zima to typy chłodne,
-                    zaś pozostałe dwa (wiosna i jesień) to odcienie ciepłe. Pani zima i pani jesień powinny nosić ubrania kontrastowe, skupiające uwagę,
-                    natomiast
-                    pani wiosna i lato lepiej wyglądają w kolorach delikatnych i pastelowych. Analiza kolorystyczna
-                    pozwala na identyfikację typu urody konkretnej osoby oraz dobranie do niej odpowiedniego, efektownego makijażu oraz twarzowej fryzury.</h5>
-
-                <figure>
-                    <img src="images/types.jpg" class="img-thumbnail">
-
-                </figure>
-            </main>
-
-
+            <div ng-view></div>
         </div>
     </div>
-    <!--<div class="row">-->
-    <!--<div class="col-md-3">-->
-    <!--<aside>-->
-    <!--<div class="bg"></div>-->
-    <!--</aside>-->
-
-    <!--</div>-->
-    <!--<div class="col-md-9 center">-->
-    <!--<figure>-->
-    <!--<img src="images/types.jpg" class="img-thumbnail">-->
-
-    <!--</figure>-->
 
 
     <div class="row">
@@ -77,7 +46,9 @@
 
 </div>
 <script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/angular-route/angular-route.min.js"></script>
 <script src="app.js"></script>
+<script src="app.route.js"></script>
 <script src="home.controller.js"></script>
 
 </body>
