route summer template

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a href="/home">Home</a></li>
                     <li><a href="/spring">Wiosna</a></li>
-                    <li>Lato</li>
+                    <li><a href="/summer">Lato</a></li>
                     <li>Jesień</li>
                     <li>Zima</li>
                     <li>Test kolorystyczny</li>
