--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
                     <li><a href="/home">Home</a></li>
                     <li><a href="/spring">Wiosna</a></li>
                     <li><a href="/summer">Lato</a></li>
-                    <li>Jesień</li>
+                    <li><a href="/autumn">Jesień</a> </li>
                     <li>Zima</li>
                     <li>Test kolorystyczny</li>
                 </ul>
