route winter  template

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
                     <li><a href="/spring">Wiosna</a></li>
                     <li><a href="/summer">Lato</a></li>
                     <li><a href="/autumn">Jesień</a> </li>
-                    <li>Zima</li>
+                    <li><a href="/winter">Zima</a></li>
                     <li>Test kolorystyczny</li>
                 </ul>
             </nav>
