--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
 <script src="bower_components/angular-route/angular-route.min.js"></script>
 <script src="app.js"></script>
 <script src="app.route.js"></script>
-<script src="home.controller.js"></script>
+<script src="home/home.controller.js"></script>
 
 </body>
 </html>
