--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,6 @@
         </div>
 
     </div>
-
-
     <div class="row">
         <div class="col-md-3 bgnav">
             <nav>
@@ -26,7 +24,7 @@
                     <li><a href="/summer">Lato</a></li>
                     <li><a href="/autumn">Jesień</a> </li>
                     <li><a href="/winter">Zima</a></li>
-                    <li>Test kolorystyczny</li>
+                    <li><a href="/color-test">Test kolorystyczny</a></li>
                 </ul>
             </nav>
 
@@ -43,13 +41,13 @@
         </footer>
     </div>
 
-
 </div>
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-route/angular-route.min.js"></script>
 <script src="app.js"></script>
 <script src="app.route.js"></script>
 <script src="home/home.controller.js"></script>
+<script src="color-test/test-color.controller.js"></script>
 
 </body>
 </html>
