color-test new buttons and backgrounds

--- a/app/color-test/color-test.html
+++ b/app/color-test/color-test.html
@@ -12,3 +12,16 @@
 </div>
 
 </div>
+<div class="row col-md-offset-5">
+    <button class="btn btn-large confirm" type="button">Potwierdź</button>
+</div>
+
+
+
+<div class="row col-md-offset-4 seasons">
+
+    <button class="btn btn-success" type="button">Wiosna</button>
+    <button class="btn btn-warning" type="button">Lato</button>
+    <button class="btn btn-danger" type="button">Jesień</button>
+    <button class="btn btn-info" type="button">Zima</button>
+</div>
