--- a/app/color-test/color-test.html
+++ b/app/color-test/color-test.html
@@ -5,23 +5,44 @@
 
 </div>
 <div class="row">
-<div class="col-md-offset-2">
-    <label>Sprawdź: jesteś chłodnym czy ciepłym typem urody?</label>
-    <button type="button" ng-click="testCtrl.changeTestColor('silver')" class="btn  btn-lg silver">SILVER</button>
-    <button type="button" ng-click="testCtrl.changeTestColor('gold')" class="btn  btn-lg gold ">GOLD</button>
-</div>
+    <div class="col-md-offset-2">
+        <label>Sprawdź: jesteś chłodnym czy ciepłym typem urody?</label>
+        <button type="button" ng-click="testCtrl.changeTestColor('silver')" class="btn  btn-lg silver">SILVER</button>
+        <button type="button" ng-click="testCtrl.changeTestColor('gold')" class="btn  btn-lg gold ">GOLD</button>
+    </div>
 
 </div>
-<div class="row col-md-offset-5">
-    <button class="btn btn-large confirm" type="button">Potwierdź</button>
+
+<div class="row col-md-offset-5 seasons">
+
+    <button class="btn btn-success" type="button" ng-show="testCtrl.testColor==='gold'" ng-click="testCtrl.setSeasonColor('springColors')">Wiosna</button>
+    <button class="btn btn-warning" type="button" ng-show="testCtrl.testColor==='silver'" ng-click="testCtrl.setSeasonColor('summerColors')">Lato</button>
+    <button class="btn btn-danger" type="button" ng-show="testCtrl.testColor==='gold'" ng-click="testCtrl.setSeasonColor('autumnColors')">Jesień</button>
+    <button class="btn btn-info" type="button" ng-show="testCtrl.testColor==='silver'" ng-click="testCtrl.setSeasonColor('winterColors')">Zima</button>
 </div>
 
+<div class="row size" ng-switch="testCtrl.season">
+    <div class="col-md-offset-2" ng-switch-when="springColors">
+        <button ng-repeat="colour in testCtrl.coloursspring" type="button" ng-click="testCtrl.changeTestColor(colour)"
+                class="btn  btn-md marginscolor" ng-class="colour">Try me
+        </button>
+    </div>
 
+    <div class="col-md-offset-2" ng-switch-when="summerColors">
+        <button ng-repeat="colour in testCtrl.colourssummer" type="button" ng-click="testCtrl.changeTestColor(colour)"
+                class="btn  btn-md marginscolor" ng-class="colour">Try me
+        </button>
+    </div>
 
-<div class="row col-md-offset-4 seasons">
-
-    <button class="btn btn-success" type="button">Wiosna</button>
-    <button class="btn btn-warning" type="button">Lato</button>
-    <button class="btn btn-danger" type="button">Jesień</button>
-    <button class="btn btn-info" type="button">Zima</button>
+    <div class="col-md-offset-2" ng-switch-when="autumnColors">
+        <button ng-repeat="colour in testCtrl.coloursautumn" type="button" ng-click="testCtrl.changeTestColor(colour)"
+                class="btn  btn-md marginscolor" ng-class="colour">Try me
+        </button>
+    </div>
+    <div class="col-md-offset-2" ng-switch-when="winterColors">
+        <button ng-repeat="colour in testCtrl.colourswinter" type="button" ng-click="testCtrl.changeTestColor(colour)"
+                class="btn  btn-md marginscolor" ng-class="colour">Try me
+        </button>
+    </div>
 </div>
+
