add image preview and add sesons colours

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
 </div>
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-route/angular-route.min.js"></script>
+<script src="bower_components/ng-image-input-with-preview/dist/ng-image-input-with-preview.min.js"></script>
 <script src="app.js"></script>
 <script src="app.route.js"></script>
 <script src="home/home.controller.js"></script>
