prepair for gh-pages

--- a/app/autumn/autumn.html
+++ b/app/autumn/autumn.html
@@ -4,7 +4,7 @@
 
 
     <figure>
-        <img src="../images/autumn.jpg" class="img-thumbnail sizeimg">
+        <img src="app/images/autumn.jpg" class="img-thumbnail sizeimg">
 
     </figure>
 
