--- a/app/home/home.html
+++ b/app/home/home.html
@@ -12,7 +12,7 @@
         pozwala na identyfikację typu urody konkretnej osoby oraz dobranie do niej odpowiedniego, efektownego makijażu oraz twarzowej fryzury.</h5>
 
     <figure>
-        <img src="../images/types.jpg" class="img-thumbnail types">
+        <img src="app/images/types.jpg" class="img-thumbnail types">
 
     </figure>
 </main>
