--- a/app/summer/summer.html
+++ b/app/summer/summer.html
@@ -4,7 +4,7 @@
 
 
     <figure>
-        <img src="../images/summer.jpg" class="img-thumbnail sizeimg">
+        <img src="app/images/summer.jpg" class="img-thumbnail sizeimg">
 
     </figure>
 
