--- a/app/spring/spring.html
+++ b/app/spring/spring.html
@@ -3,7 +3,7 @@
 
 
     <figure>
-        <img src="../images/spring.jpg" class="img-thumbnail sizeimg">
+        <img src="app/images/spring.jpg" class="img-thumbnail sizeimg">
     </figure>
 
     <article>
