--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <div class="col-md-3 bgnav">
             <nav>
                 <ul>
-                    <li><a href="home">Home</a></li>
-                    <li><a href="spring">Wiosna</a></li>
-                    <li><a href="summer">Lato</a></li>
-                    <li><a href="autumn">Jesień</a> </li>
-                    <li><a href="winter">Zima</a></li>
-                    <li><a href="color-test">Test kolorystyczny</a></li>
+                    <li><a href="./home">Home</a></li>
+                    <li><a href="./spring">Wiosna</a></li>
+                    <li><a href="./summer">Lato</a></li>
+                    <li><a href="./autumn">Jesień</a> </li>
+                    <li><a href="./winter">Zima</a></li>
+                    <li><a href="./color-test">Test kolorystyczny</a></li>
                 </ul>
             </nav>
 
