--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Types of beauty</title>
     <link rel="stylesheet" href="app/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="app/index.css">
-
+    <base href="/types-of-beauty/"/>
 </head>
 
 <body ng-controller="HomeController as homeCtrl">
